# asop_bot

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/: CODEOWNERS
asop_bot/: Dockerfile  README.md  pyproject.toml
embeddings/: README.md  embeddings  pyproject.toml
embeddings/page_objects/: __init__.py  abcd_page.py
embeddings/pipeline/: __init__.py  pipeline.py
embeddings/tests/page_objects/: test_abcd_page.py
tests/embeddings/page_objects/: abcd.html  test_abcd_page.py
tests/vectorstore/: test_vectorstore.py
vectorstore/: README.md  __init__.py  chroma.py
vectorstore/chroma_data/: chroma-collections.parquet  chroma-embeddings.parquet
vectorstore/chroma_data/index/: id_to_uuid_29b8f9bb-6480-47ff-863a-2565acf5bea1.pkl  id_to_uuid_8b29d1a7-23af-4e95-8a9e-88f0125c30a0.pkl  id_to_uuid_9135486f-4b72-4a88-b24c-2d4ca5c09bbb.pkl  id_to_uuid_b58a91d0-14ec-4cfd-b63b-3f0d0fd366af.pkl  index_metadata_29b8f9bb-6480-47ff-863a-2565acf5bea1.pkl  index_metadata_8b29d1a7-23af-4e95-8a9e-88f0125c30a0.pkl  index_metadata_9135486f-4b72-4a88-b24c-2d4ca5c09bbb.pkl  index_metadata_b58a91d0-14ec-4cfd-b63b-3f0d0fd366af.pkl  uuid_to_id_29b8f9bb-6480-47ff-863a-2565acf5bea1.pkl  uuid_to_id_8b29d1a7-23af-4e95-8a9e-88f0125c30a0.pkl  uuid_to_id_9135486f-4b72-4a88-b24c-2d4ca5c09bbb.pkl  uuid_to_id_b58a91d0-14ec-4cfd-b63b-3f0d0fd366af.pkl
