[tool.poetry]
name = "asop-bot"
version = "0.1.0"
description = "A sample LLM project for actuaries"
authors = ["JP Barela"]
readme = "README.md"
packages = [{include = "vectorstore"},{include = "embeddings"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.asop_bot]
optional = true

[tool.poetry.group.asop_bot.dependencies]
openai = "^0.27.8"
streamlit = "^1.24.1"

[tool.poetry.group.embeddings]
optional = true

[tool.poetry.group.embeddings.dependencies]
bs4 = "^0.0.1"
click = "^8.1.4"
langchain = "^0.0.227"
pypdf = "^3.12.0"
requests = "^2.31.0"

[tool.poetry.group.vectorstore]
optional = true

[tool.poetry.group.vectorstore.dependencies]
chromadb = "^0.3.26"
langchain = "^0.0.227"
sentence-transformers = "^2.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
mypy = "^1.4.1"
types-beautifulsoup4 = "^4.12.0.5"
pytest-env = "^0.8.2"

[tool.pytest.ini_options]
env = [
    "TESTING = true"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
