[tool.poetry]
name = "embeddings"
version = "0.1.0"
description = ""
authors = ["JP Barela"]
readme = "README.md"
packages = [{include = "page_objects"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
requests = "^2.31.0"
bs4 = "^0.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
mypy = "^1.4.1"
types-beautifulsoup4 = "^4.12.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
